Bug #483 - put cursor on print button "Showing Print Bar-code" is it correct ? | Bug #482 - Use of this Icon??? Bug #476 - Invoice number Box is too small. Image Attached Bug #467 - Box is going down--- Sales price Image Attached

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1586,7 +1586,9 @@
     float: left;
     border-right: 1px solid #adaaaa;
     border-left: 0;
-  }
+  } .print-area .dropdown-menu {
+    left: 5px;
+    right: inherit;}
   .hdg_bredcrump {
     background: url("./assets/images/breadcrump_border_Ar.webp") no-repeat top
       left #fff !important;
